--- a/css/main.css
+++ b/css/main.css
@@ -12,18 +12,17 @@ html {
 }
 h1,
 h3 {
+  padding-top: 30px;
   text-align: center;
+  margin: 0;
 }
+
 .max-width-wrapper {
-  max-width: 850px;
+  max-width: 900px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 16px; 
-  padding-right: 16px; 
+  padding-left: 20px; 
+  padding-right: 20px; 
+  padding-bottom: 20px;
+  background-color: rgb(223, 210, 210);
   }
-  
-  /*---------- HEADER ----------*/
-
-  /*---------- CONTENT AREA ----------*/
-  
-  /*---------- FOOTER ----------*/
